src/test/ui/span/issue-19950-2.stderr
error[E0205]: the trait `Copy` may not be implemented for type `Foo`
  --> $DIR/issue-19950-2.rs:17:6
   |
14 |     MyVariant(NoCopy)
   |     ----------------- this variant doesn't implement `Copy`
...
17 | impl Copy for Foo {}
   |      ^^^^ variant `Foo::MyVariant` doesn't implement `Copy`

error: aborting due to previous error

